test/files/neg/t6138.scala
object definitions {
  def getClass(s: String): Any = ???
  def getClass(s: Int): Any = ???
  getClass(???): String
}
