test/files/neg/t6138.check
t6138.scala:4: error: ambiguous reference to overloaded definition,
both method getClass in object definitions of type (s: Int)Any
and  method getClass in object definitions of type (s: String)Any
match argument types (Nothing)
  getClass(???): String
  ^
one error found
